# exercise_collection

./: README.md
c-CustomerManager-shell/: README.md  makeshell.sh
c-CustomerManager-shell/include/: main.h  menu.h  tools.h
c-CustomerManager-shell/src/: main.c  menu.c  tools.c
c-FamilyAccounting-shell/: README.md  makeshell.sh
c-course_design-shell/: README.md  build.sh  map.dio
c-ctranslator-shell/: README.md  makeshell.sh
python-DropWords-shell/: .gitignore  README.md  run.py
rust-exercise_collection-gtk/: README.md
rust-exercise_collection-gtk/hello_button/: Cargo.toml  README.md
rust-exercise_collection-gtk/hello_button/build-aux/: io.github.signdo.ExerciseCollection.Devel.json
rust-exercise_collection-gtk/hello_button/data/: io.github.signdo.ExerciseCollection.metainfo.xml.in.in  io.github.signdo.ExerciseCollection.service.in
rust-exercise_collection-gtk/hello_button/data/resources/ui/: window.blp
rust-exercise_collection-gtk/hello_button/src/: window.rs
rust-exercise_collection-gtk/template/: .gitignore  Cargo.toml  README.md  meson.build
rust-exercise_collection-gtk/template/data/: io.github.signdo.ExerciseCollection.gschema.xml.in
rust-exercise_collection-gtk/template/data/resources/ui/: shortcuts.blp  window.blp
rust-exercise_collection-gtk/template/po/: POTFILES.in
rust-exercise_collection-gtk/template/src/: application.rs  main.rs  window.rs
rust-hjkl-tui/: Cargo.toml  README.md
rust-hjkl-tui/src/: app.rs  (+1 more)
rust-keypunch-tui/: README.md
rust-terminal_resolution-tui/: Cargo.toml  README.md
rust-wordspunch-tui/: README.md
(+73 files in other folders)
