[package]
name = "exercise_collection"
authors = ["signdo <signdo@pm.me>"]
edition = "2024"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
