[package]
name = "exercise_collection"
authors = ["signdo <signdo@pm.me>"]
edition = "2024"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
gst = { version = "0.24", package = "gstreamer" }
tracing = "0.1.41"
tracing-subscriber = "0.3"
